--- a/SpringMvc/demo-jsp/pom.xml
+++ b/SpringMvc/demo-jsp/pom.xml
@@ -8,15 +8,16 @@
         <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>boot.jungwoo</groupId>
-    <artifactId>demospringmvc</artifactId>
+    <groupId>mvc.jungwoo</groupId>
+    <artifactId>demo-jsp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demospringmvc</name>
-    <description>demospringmvc</description>
+    <packaging>war</packaging>
+    <name>demo-jsp</name>
+    <description>demo-jsp</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    <dependencies>q
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -24,14 +25,28 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-test-autoconfigure</artifactId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
