--- a/Spring_Boot/demo7-Spring-boot-starter-security/pom.xml
+++ b/Spring_Boot/demo7-Spring-boot-starter-security/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.5</version>
+        <version>2.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>JPA-link</artifactId>
+    <artifactId>demo7-Spring-boot-starter-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>JPA-link</name>
-    <description>JPA-link</description>
+    <name>demo7-Spring-boot-starter-security</name>
+    <description>demo7-Spring-boot-starter-security</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -24,21 +24,21 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId></groupId>
-            <artifactId>flyway-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>=
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
