--- a/SecondProject/src/main/resources/application.yml
+++ b/SecondProject/src/main/resources/application.yml
@@ -15,6 +15,11 @@ spring:
       format_sql: true
       show_sql: true
     open-in-view: true
+  data:
+    web:
+      pageable:
+        default-page-size: 3
+        max-page-size: 2000
 logging.level:
   org.hibernate.SQL: debug
 # org.hibernate.type: trace
