--- a/SecondProject/build.gradle
+++ b/SecondProject/build.gradle
@@ -1,20 +1,21 @@
+
 plugins {
     id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'java'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
+//Maven의 scope
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
 }
 
+//Apache Maven 중앙 저장소를 이용
 repositories {
     mavenCentral()
 }
@@ -28,10 +29,30 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'junit:junit:4.13.1'
     implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
+
+    runtimeOnly 'com.h2database:h2'
+
+    //Lombok
+    annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.querydsl:querydsl-jpa'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
+
+    // Querydsl
+    implementation 'com.querydsl:querydsl-jpa'
+
+    // Querydsl JPAAnnotationProcessor 사용 지정
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    // java.lang.NoClassDefFoundError(javax.annotation.Generated) 발생 대응
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+//    annotationProcessor(
+//            "javax.persistence:javax.persistence-api",
+//            "javax.annotation:javax.annotation-api",
+//            "com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
@@ -39,19 +60,58 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+//
+//sourceSets {
+//    main {
+//        java {
+//            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+//        }
+//    }
+//}
 
-//querydsl 추가 시작
-def querydslDir = "$buildDir/generated/querydsl"
-querydsl {
-    jpa = true
-    querydslSourcesDir = querydslDir
+
+clean {
+    delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성 위치
 }
-sourceSets {
-    main.java.srcDir querydslDir
-}
-configurations {
-    querydsl.extendsFrom compileClasspath }
-compileQuerydsl {
-    options.annotationProcessorPath = configurations.querydsl
-}
-//querydsl 추가 끝
+
+////querydsl 추가 시작
+//def querydslDir = "$buildDir/generated/querydsl"
+//querydsl {
+//    jpa = true
+//    querydslSourcesDir = querydslDir
+//}
+//sourceSets {
+//    main.java.srcDir querydslDir
+//}
+//configurations {
+//    querydsl.extendsFrom compileClasspath
+//}
+//compileQuerydsl {
+//    options.annotationProcessorPath = configurations.querydsl
+//}
+////clean {
+////    delete file(querydslDir) // 인텔리제이 Annotation processor 생성물 생성위치
+////}
+///**
+// * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
+// */
+////task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
+////    delete file(querydslDir)
+////}
+////querydsl 추가 끝
+//
+//compileQuerydsl.doFirst {
+//    if ( file(querydslDir).exists() )
+//        delete(file(querydslDir))
+//}
+///**
+// *  compileQuerydsl.doFirst end
+// */
+//
+//tasks.withType(JavaCompile) {
+//    options.generatedSourceOutputDirectory = file(querydslDir)
+//}
+//
+//clean.doLast {
+//    delete file(querydslDir)
+//}
