게시물 댓글 달기, 댓글 읽기

--- a/SecondProject/src/main/resources/application.yml
+++ b/SecondProject/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true # sql이 여러 줄로 이쁘게 보여짐.
